add in contact modal

--- a/index.html
+++ b/index.html
@@ -1134,50 +1134,50 @@
 
 
 
-        <div id="requestModalContainer">
-
-            <div class="modal fade" id="requestAppointmentForm" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                        <h3 class="modal-title font-dark-blue">Request Appointment</h3>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-error"></div>
-                        <form id="mail-form" method="post" action="//web-api.tysonsteele.com/v1/webprops/KEY/schedule" >
-                            <h6 >YES! Please contact me to schedule an appointment or answer any questions I might still have:</h6>
-                            <div class="row appointment_input_row form-group">
-                                <div class="col-xs-4">
-                                    <label for="name">Name:</label>
+        <div class="modal fade contact-modal" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-body">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                            <h4 class="modal-title">Schedule an Appointment</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-error"></div>
+                            <form id="mail-form" method="post" action="//web-api.tysonsteele.com/v1/webprops/KEY/schedule">
+                                <h5>YES! Please contact me to schedule an appointment or answer any questions I&nbsp;might&nbsp;still&nbsp;have:</h5>
+                                <div class="row appointment_input_row form-group">
+                                    <div class="col-xs-4">
+                                        <label for="name">Name:</label>
+                                    </div>
+                                    <div class="col-xs-8">
+                                        <input type="text" name="name" id="name" class="form-control appointment_form">
+                                    </div>
                                 </div>
-                                <div class="col-xs-8">
-                                    <input type="text" name="name" id="name" class="form-control appointment_form">
+                                <div class="row appointment_input_row form-group">
+                                    <div class="col-xs-4">
+                                        <label for="confirmed_email">Email:</label>
+                                    </div>
+                                    <div class="col-xs-8">
+                                        <input type="email" name="confirmed_email" id="confirmed_email"
+                                               class="form-control appointment_form">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row appointment_input_row form-group">
-                                <div class="col-xs-4">
-                                    <label for="confirmed_email">Email:</label>
+                                <div class="row appointment_input_row form-group">
+                                    <div class="col-xs-4">
+                                        <label for="phone">Phone:</label>
+                                    </div>
+                                    <div class="col-xs-8">
+                                        <input type="text" name="phone" id="phone" class="form-control appointment_form">
+                                    </div>
                                 </div>
-                                <div class="col-xs-8">
-                                    <input type="email" name="confirmed_email" id="confirmed_email" class="form-control appointment_form">
-                                </div>
-                            </div>
-                            <div class="row appointment_input_row form-group ">
-                                <div class="col-xs-4">
-                                    <label for="phone">Phone:</label>
-                                </div>
-                                <div class="col-xs-8">
-                                    <input type="text" name="phone" id="phone" class="form-control appointment_form">
-                                </div>
-                            </div>
-                            <div class="center">
-                                <button type="submit" class="btn form-btn">Request Appointment</button>
-                            </div>
-                        </form>
+                                <button type="submit" class="btn button custom-btn">Request Appointment</button>
+                            </form>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </div>
 
     </div>
@@ -1186,7 +1186,7 @@
 
 <!-- Footer
   ============================================= -->
-<footer id="footer" class="dark">
+<footer id="footer">
 
     <!-- Copyrights
     ============================================= -->
@@ -1194,35 +1194,11 @@
 
         <div class="container clearfix">
 
-            <div class="col_half">
-                Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
-                <div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+            <div class="col_full center">
+                Copyrights &copy; 2014 All Rights Reserved <a href="//www.tysonsteele.com/" target="_blank">Tyson&nbsp;Steele&nbsp;Associates</a>.
             </div>
 
-            <div class="col_half col_last tright">
-                <div class="fright clearfix">
-                    <a href="#" class="social-icon si-colored si-facebook">
-                        <i class="icon-facebook"></i>
-                        <i class="icon-facebook"></i>
-                    </a>
 
-
-                    <a href="#" class="social-icon si-colored si-gplus">
-                        <i class="icon-gplus"></i>
-                        <i class="icon-gplus"></i>
-                    </a>
-
-                    <a href="#" class="social-icon si-colored si-yelp">
-                        <i class="icon-yelp"></i>
-                        <i class="icon-yelp"></i>
-                    </a>
-
-                </div>
-
-                <div class="clear"></div>
-
-                <i class="icon-envelope2"></i> info@canvas.com <span class="middot">&middot;</span> <i class="icon-headphones"></i> +91-11-6541-6369 <span class="middot">&middot;</span> <i class="icon-skype2"></i> CanvasOnSkype
-            </div>
 
         </div>
 
