--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="row">
                     <div class="col-lg-12 center">
                         <h2>Meet the Team</h2>
-                        <p>Select a team member to learn more.</p>
+                        <p>Select a team member to&nbsp;learn&nbsp;more.</p>
 
                         <div id="oc-portfolio" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="5" data-loop="true" data-autoplay="7000" data-speed="1000">
 
