--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            ============================================= -->
             <nav id="primary-menu">
                 <ul class="navbar">
-                    <li><a class="nav-1" href="#" data-scrollto="#specials">
+                    <li><a class="nav-1" href="#" data-scrollto="#specials" data-offset="60">
                         <div class="">New Patient Offers</div>
                     </a></li>
                     <li><a class="nav-2" href="#" data-scrollto="#no-insurance">
@@ -69,7 +69,7 @@
                     <li><a class="nav-3" href="#" data-scrollto="#reviews">
                         <div class="">Reviews</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#team">
+                    <li><a href="#" data-scrollto="#meet-the-doctor">
                         <div>Team</div>
                     </a></li>
                     <li><a href="#" data-scrollto="#services">
@@ -78,31 +78,31 @@
                     <li><a href="#" data-scrollto="#smile-gallery">
                         <div>Smile Gallery</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#location">
+                    <li><a href="#" data-scrollto="#google-map">
                         <div>Location</div>
                     </a></li>
                 </ul>
 
                 <ul class="mobile-primary-menu navbar">
-                    <li><a class="nav-1" href="#" data-scrollto="#specials">
+                    <li><a class="nav-1" href="#" data-scrollto="#specials" data-offset="0">
                         <div class="">New Patient Offers</div>
                     </a></li>
-                    <li><a class="nav-2" href="#" data-scrollto="#no-insurance">
+                    <li><a class="nav-2" href="#" data-scrollto="#no-insurance" data-offset="0">
                         <div class="">No Insurance?</div>
                     </a></li>
-                    <li><a class="nav-3" href="#" data-scrollto="#reviews">
+                    <li><a class="nav-3" href="#" data-scrollto="#reviews" data-offset="0">
                         <div class="">Reviews</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#team">
+                    <li><a href="#" data-scrollto="#meet-the-doctor" data-offset="0">
                         <div>Team</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#services">
+                    <li><a href="#" data-scrollto="#services" data-offset="0">
                         <div>Services</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#smile-gallery">
+                    <li><a href="#" data-scrollto="#smile-gallery" data-offset="0">
                         <div>Smile Gallery</div>
                     </a></li>
-                    <li><a href="#" data-scrollto="#location">
+                    <li><a href="#" data-scrollto="#google-map" data-offset="0">
                         <div>Location</div>
                     </a></li>
                 </ul>
@@ -117,12 +117,12 @@
     <!-- Marquee Slider
   ============================================= -->
     <div id="mobile-slider" class="mobile-slider hidden-md hidden-lg">
-        <a href="#" data-scrollTo="#section-specials" data-offset="0">
+        <a href="#" data-scrollTo="#specials" data-offset="0">
             <img src="images/ikuta-slide-mobile.jpg" alt="Ikuta Dental Health Care">
         </a>
     </div>
 
-    <section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax full-screen with-header swiper_wrapper clearfix hidden-xs">
+    <section id="slider" class="hidden-xxs hidden-xs hidden-sm slider-parallax full-screen with-header swiper_wrapper clearfix hidden-xs" data-loop="true" data-speed="1000" data-autoplay="7000">
         <div class="slider-parallax-inner">
             <div class="swiper-container swiper-parent swiper-container-horizontal">
                 <div class="swiper-wrapper">
@@ -136,7 +136,7 @@
                                 <h2 data-caption-animate="fadeInUp" data-caption-delay="200">To See You</h2>
                                 <h1 data-caption-animate="fadeInUp" data-caption-delay="200">smile</h1>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200">Now Welcoming New Patients</p>
-                                <a class="button" data-scrollto="#specials" data-caption-animate="fadeInUp" data-caption-delay="200">New Patient Offers</a>
+                                <a class="button" data-offset="60" data-scrollto="#specials" data-caption-animate="fadeInUp" data-caption-delay="200">New Patient Offers</a>
 
 
                             </div>
@@ -158,7 +158,7 @@
                                     <i class="icon-star3"></i>
                                 </div>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200">“The state of the art technology and skillful, tender touch of their hygienists and doctors is incomparable.” <span class="t700">-Kim O.</span></p>
-                                <a class="button" data-scrollto="#specials" data-caption-animate="fadeInUp" data-caption-delay="200">Read More Reviews</a>
+                                <a class="button" data-offset="60" data-scrollto="#reviews" data-caption-animate="fadeInUp" data-caption-delay="200">Read More Reviews</a>
 
 
                             </div>
@@ -174,23 +174,25 @@
                                 <h3 class="patients" data-caption-animate="fadeInUp" data-caption-delay="200">Our&nbsp;Patients&nbsp;Don't&nbsp;Need&nbsp;It!</h3>
                                 <h6 data-caption-animate="fadeInUp" data-caption-delay="200">Get&nbsp;your&nbsp;preventive&nbsp;care</h6>
                                 <h6 class="monthly-fee" data-caption-animate="fadeInUp" data-caption-delay="200">for&nbsp;a&nbsp;low&nbsp;monthly&nbsp;fee.</h6>
-                                <a class="button" data-scrollto="#no-insurance" data-caption-animate="fadeInUp" data-caption-delay="200">Learn More</a>
+                                <a class="button" data-offset="60" data-scrollto="#no-insurance" data-caption-animate="fadeInUp" data-caption-delay="200">Learn More</a>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
-            <a href="#" data-scrollto="#phone-slug-1" data-offset="120" class="one-page-arrow">
-                <i class="icon-angle-down infinite animated bounce"></i>
-            </a>
         </div>
+        <a href="#" data-scrollto="#phone-slug-1" data-offset="90" class="one-page-arrow">
+            <i class="icon-angle-down infinite animated bounce"></i>
+        </a>
     </section>
 
     <!-- Content
   ============================================= -->
 
+
     <div id="content" >
+
 
         <!-- Phone Slug 1 -->
         <div id="phone-slug-1" class="phone-slug-1 phone-slug">
@@ -522,7 +524,7 @@
                         <p>Exclusively for our uninsured&nbsp;patients.</p>
                         <p>Make easy monthly payments for your preventive&nbsp;care.</p>
                         <p>Save money on your treatment.</p>
-                        <div class="button-wrap"><a class="button" href="#" target="_blank">Learn More</a></div>
+                        <div class="button-wrap"><a class="button" href="https://ikuta-dental-health-center.illumitrac.com/#programs" target="_blank">Learn More</a></div>
                     </div>
                     <div class="col-lg-6 col-md-12 col-2">
 
@@ -1079,18 +1081,18 @@
                         <p class="p-2">Reedley, CA 93654</p>
                         <p class="p-3"><a target=_blank" href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK">Click to view map &amp; directions </a></p>
                         <div class="social-wrap">
-                            <a href="#" class="social-icon si-colored si-facebook">
+                            <a href="https://www.facebook.com/IkutaDentalHealthCenter" target="_blank" class="social-icon si-colored si-facebook">
                                 <i class="icon-facebook"></i>
                                 <i class="icon-facebook"></i>
                             </a>
 
 
-                            <a href="#" class="social-icon si-colored si-gplus">
+                            <a href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK" target="_blank" class="social-icon si-colored si-gplus">
                                 <i class="icon-gplus"></i>
                                 <i class="icon-gplus"></i>
                             </a>
 
-                            <a href="#" class="social-icon si-colored si-yelp">
+                            <a href="https://www.yelp.com/biz/dennis-d-ikuta-dds-reedley-2" target="_blank" class="social-icon si-colored si-yelp">
                                 <i class="icon-yelp"></i>
                                 <i class="icon-yelp"></i>
                             </a>
