--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     <!--Fonts-->
 
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700|Poppins:300,400|Lato:400,700" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Arimo:400,700|Lato:400,700,900|Open+Sans:400,600,700,800" rel="stylesheet">
     <!-- Stylesheet
     ============================================= -->
 
