fix validation errors

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <p>Welcome to Ikuta Dental Health Center! Dennis and Deric Ikuta, a father-and-son team, earned their dental degrees from the prestigious University of the Pacific in San Francisco. Each year, they continue their education by participating in extensive postdoctoral studies that focus on the latest clinical and family dental techniques. Their goal is to provide the best care while making you and your family more comfortable than you ever thought possible.
                         </p>
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://player.vimeo.com/video/205090959" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="https://player.vimeo.com/video/205090959" width="640" height="272"></iframe>
                         </div>
                     </div>
                 </div>
@@ -310,7 +310,7 @@
 
 
         <!-- Team Modals -->
-        <div class="modal fade team-modal" id="minnie" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade team-modal" id="minnie" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -331,7 +331,7 @@
             </div>
         </div>
 
-        <div class="modal fade team-modal" id="george" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade team-modal" id="george" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -352,7 +352,7 @@
             </div>
         </div>
 
-        <div class="modal fade team-modal" id="lisa" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade team-modal" id="lisa" tabindex="-1" role="dialog"  aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -373,7 +373,7 @@
             </div>
         </div>
 
-        <div class="modal fade team-modal" id="eileen" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade team-modal" id="eileen" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -394,7 +394,7 @@
             </div>
         </div>
 
-        <div class="modal fade team-modal" id="evelyn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade team-modal" id="evelyn" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -668,7 +668,7 @@
 
         <!-- More Services Modals -->
 
-        <div class="modal fade service-modal" id="mouthguard" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="mouthguard" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -690,7 +690,7 @@
             </div>
         </div>
 
-        <div class="modal fade service-modal" id="neuromuscular" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="neuromuscular" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -711,7 +711,7 @@
             </div>
         </div>
 
-        <div class="modal fade service-modal" id="invisalign" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="invisalign" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -733,7 +733,7 @@
             </div>
         </div>
 
-        <div class="modal fade service-modal" id="tmj" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="tmj" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -755,7 +755,7 @@
         </div>
 
 
-        <div class="modal fade service-modal" id="family-care" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="family-care" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -777,7 +777,7 @@
             </div>
         </div>
 
-        <div class="modal fade service-modal" id="sleep-apnea" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade service-modal" id="sleep-apnea" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -821,7 +821,7 @@
         </section>
 
         <!-- Smile Gallery Modal -->
-        <div class="modal fade smile-gallery-modal" id="smile-gallery-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade smile-gallery-modal" id="smile-gallery-modal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -1078,7 +1078,7 @@
                         <h6>Dennis Ikuta, DDS</h6>
                         <p class="p-1">1112 C Street</p>
                         <p class="p-2">Reedley, CA 93654</p>
-                        <p class="p-3"><a target=_blank" href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK">Click to view map &amp; directions </a></p>
+                        <p class="p-3"><a target="_blank" href="https://www.google.com/maps/place/Dr.+Dennis+D.+Ikuta,+DDS/@36.599125,-119.446157,15z/data=!4m2!3m1!1s0x0:0x626274332a83b60b?sa=X&ved=0ahUKEwjd5eb996nSAhVKwWMKHf9KDHsQ_BIIbjAK">Click to view map &amp; directions </a></p>
                         <div class="social-wrap">
                             <a href="https://www.facebook.com/IkutaDentalHealthCenter" target="_blank" class="social-icon si-colored si-facebook">
                                 <i class="icon-facebook"></i>
@@ -1135,7 +1135,7 @@
 
 
 
-        <div class="modal fade contact-modal" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade contact-modal" id="contact-modal" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-body">
                     <div class="modal-content">
@@ -1181,33 +1181,34 @@
             </div>
         </div>
 
-    </div>
+</div><!-- #wrapper end -->
 
-</div><!-- #content end -->
 
-<!-- Footer
-  ============================================= -->
-<footer id="footer">
 
-    <!-- Copyrights
-    ============================================= -->
-    <div id="copyrights">
+    <!-- #content end -->
 
-        <div class="container clearfix">
+    <!-- Footer
+      ============================================= -->
+    <footer id="footer">
 
-            <div class="col_full center">
-                Copyrights &copy; 2014 All Rights Reserved <a href="//www.tysonsteele.com/" target="_blank">Tyson&nbsp;Steele&nbsp;Associates</a>.
+        <!-- Copyrights
+        ============================================= -->
+        <div id="copyrights">
+
+            <div class="container clearfix">
+
+                <div class="col_full center">
+                    Copyrights &copy; 2014 All Rights Reserved <a href="//www.tysonsteele.com/" target="_blank">Tyson&nbsp;Steele&nbsp;Associates</a>.
+                </div>
+
+
+
             </div>
 
+        </div><!-- #copyrights end -->
 
+    </footer><!-- #footer end -->
 
-        </div>
-
-    </div><!-- #copyrights end -->
-
-</footer><!-- #footer end -->
-
-</div><!-- #wrapper end -->
 
 
 
