--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         <!-- Meet The Doctor Below -->
         <div class="meet-the-doctor-below hidden-lg">
-            <img src="images/bio.jpg" alt="Dr. Dennis Ikuta and Dr. Deric Ikuta">
+            <img src="images/mobile-bio.jpg" alt="Dr. Dennis Ikuta and Dr. Deric Ikuta">
         </div>
 
         <!-- Meet The Team -->
@@ -244,7 +244,7 @@
                         <h2>Meet the Team</h2>
                         <p>Select a team member to&nbsp;learn&nbsp;more.</p>
 
-                        <div id="oc-portfolio" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="5" data-loop="true" data-autoplay="7000" data-speed="1000">
+                        <div id="oc-portfolio" class="center owl-carousel portfolio-carousel carousel-widget" data-margin="40" data-nav="true" data-pagi="false" data-items-xxs="2" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="5" data-loop="true" data-autoplay="7000" data-speed="1000">
 
                             <div class="oc-item" data-toggle="modal" data-target="#minnie">
                                 <div class="iportfolio">
@@ -535,7 +535,7 @@
 
         <!-- No Insurance Bottom -->
         <div class="no-insurance-bottom hidden-lg">
-            <img src="images/insurance.jpg" alt="No Insurance?">
+            <img src="images/insurance-mobile.jpg" alt="No Insurance?">
         </div>
 
         <!-- Services -->
@@ -546,7 +546,7 @@
                 <div class="row">
                     <div class="col-lg-12 center">
                         <h2>Our Services</h2>
-                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#contact-modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
+                        <p class="description-text">By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#contact-modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
                     </div>
                 </div>
                 <div class="row row-2"></div>
@@ -1040,7 +1040,7 @@
                         <div class="button-wrap"><a class="button button-2" href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=12863&practiceId=38044" target="_blank">New Patient Forms</a></div>
                     </div>
                     <div class="col-md-4">
-                        <div class="button-wrap"><a class="button button-3" href="http://www.ikutasmiles.com/pdf/tmj-sleep-apnea.pdf " target=")blank">TMJ/Apnea Questionnaire</a></div>
+                        <div class="button-wrap"><a class="button button-3" href="images/pdf/tmj-sleep-apnea.pdf" target="_blank">TMJ/Apnea Questionnaire</a></div>
                     </div>
                 </div>
             </div>
@@ -1055,7 +1055,7 @@
                     </div>
                     <div class="col-md-6 col-1">
                         <a href="https://www.carecredit.com/" target="_blank">
-                            <img src="images/care-credit-footer.png" alt="Care Credit">
+                            <img src="images/care-credit-logo.png" alt="Care Credit">
                         </a>
                     </div>
                     <div class="col-md-6 col-2">
@@ -1118,11 +1118,11 @@
                                 <p>Fri:</p>
                             </div>
                             <div class="times">
-                                <p>8:00am - 5:00pm</p>
-                                <p>8:00am - 5:00pm</p>
-                                <p>8:00am - 5:00pm</p>
-                                <p>8:00am - 5:00pm</p>
-                                <p>8:00am - 5:00pm</p>
+                                <p>8:00am - 5:30pm</p>
+                                <p>8:20am - 5:30pm</p>
+                                <p>8:20am - 5:30pm</p>
+                                <p>8:00am - 5:30pm</p>
+                                <p>8:00am - 12:00pm</p>
                             </div>
                         </div>
                     </div>
@@ -1198,7 +1198,7 @@
             <div class="container clearfix">
 
                 <div class="col_full center">
-                    Copyrights &copy; 2014 All Rights Reserved <a href="//www.tysonsteele.com/" target="_blank">Tyson&nbsp;Steele&nbsp;Associates</a>.
+                    Copyrights &copy; <script>document.write(+new Date().getFullYear());</script> All Rights Reserved <a href="//www.tysonsteele.com/" target="_blank">Tyson&nbsp;Steele&nbsp;Associates</a>.
                 </div>
 
 
