edits for TS site Ikuta - 2nd round

--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,7 @@
                 <div class="img-wrap img-wrap-three hidden-lg hidden-md"><a href="#" data-scrollto="#header"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></a></div>
                 <div class="row">
                     <div class="col-md-4 col-1">
+                        <div class="img-wrap img-wrap-two img-wrap-mobile hidden-lg hidden-md"><img src="images/ikuta-footer.svg" alt="Dr. Ikuta"></div>
                         <h6 class="h6-1">Deric Ikuta, DDS</h6>
                         <h6>Dennis Ikuta, DDS</h6>
                         <p class="p-1">1112 C Street</p>
@@ -1100,7 +1101,7 @@
                     </div>
                     <div class="col-md-4 col-2">
                         <div class="img-wrap img-wrap-one hidden-sm hidden-xs hidden-xxs"><img src="images/ikuta-symbol.svg" alt="Ikuta Symbol"></div>
-                        <div class="img-wrap img-wrap-two"><img src="images/ikuta-label.svg" alt="Dr. Ikuta"></div>
+                        <div class="hidden-sm hidden-xs hidden-xxs img-wrap img-wrap-two img-wrap-desktop"><img src="images/ikuta-footer.svg" alt="Dr. Ikuta"></div>
                         <p class="p-1">New Patient Hotline</p>
                         <p class="p-2"><a href="tel:+18887038289">(888) 703&#8209;8289</a></p>
                         <p class="p-3">Existing patients: <a href="tel:+15596386321">(559) 638&#8209;6321</a></p>
@@ -1118,7 +1119,7 @@
                                 <p>Fri:</p>
                             </div>
                             <div class="times">
-                                <p>8:00am - 5:30pm</p>
+                                <p>8:20am - 5:30pm</p>
                                 <p>8:20am - 5:30pm</p>
                                 <p>8:20am - 5:30pm</p>
                                 <p>8:00am - 5:30pm</p>
